Fixes #6330: Commented out overflow-x: hidden to resolve scrollbar issue

--- a/src/renderer/views/Settings/Settings.css
+++ b/src/renderer/views/Settings/Settings.css
@@ -5,7 +5,7 @@
 
 .settingsSections,
 .switchRow {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   max-inline-size: 90%;
 }
 
